--- a/Transfer.Web/Views/Shared/_LayoutC.cshtml
+++ b/Transfer.Web/Views/Shared/_LayoutC.cshtml
@@ -23,6 +23,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Auth" asp-action="LogOut">Logout</a>
+                        </li>
                     </ul>
                 </div>
             </div>
