--- a/Transfer.Web/Views/Home/Index2.cshtml
+++ b/Transfer.Web/Views/Home/Index2.cshtml
@@ -13,7 +13,8 @@
 }
 
 
-<div class="text-center">
+@*<div class="text-center">
     <h1 class="display-4">Welcome555</h1>
     <p><span class="someClass">Learn</span> about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+</div>*@
+<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
