--- a/Transfer.Web/Views/Shared/_LayoutC.cshtml
+++ b/Transfer.Web/Views/Shared/_LayoutC.cshtml
@@ -21,6 +21,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index2">To markup</a>
+                        </li>
                         @if (!Transfer.Web.Models.Security.IsAuthenticated)
                         {
                             <li class="nav-item">
