--- a/Transfer.Web/Views/Shared/_Layout.cshtml
+++ b/Transfer.Web/Views/Shared/_Layout.cshtml
@@ -9,89 +9,78 @@
 <body>
     <div class="container-fluid header">
         <div class="container">
-            <div class="row">
-                <div class="row main-header d-flex flex-wrap align-items-center">
-                    <div class="col-3 text-end">
-                        <a href="/"><img src="/images/trsite_logo.png" class="main-logo" /></a>
-                    </div>
-                    <div class="col-2 social">
-                        <a href="/"><i class="fab fa-vk fa-lg"></i></a>
-                        <a href="/"><i class="fab fa-instagram-square fa-lg"></i></a>
-                        <a href="/"><i class="fab fa-facebook-square fa-lg"></i></a>
-                        <a href="/"><i class="fab fa-telegram fa-lg"></i></a>
-                    </div>
-                    <div class="col-3 text-end">
-                        <a href="#" class="location">
-                            <div>
-                                <i class="fas fa-location-arrow"></i>
-                                <span class="city">Александровск-Сахалинский</span>
-                            </div>
-                        </a>
-                    </div>
-                    @if (Transfer.Web.Models.Security.IsAuthenticated)
-                    {
-                        <div class="col-2 offset-md-2 text-center">
-                            <a class="top-button-a" asp-controller="Auth" asp-action="LogOut"><div class="top-button">Выход</div></a>
-                        </div>
-                    }
-                    else
-                    {
-                        <div class="col-2 text-center">
-                            <a class="top-button-reg-a" asp-controller="Home" asp-action="Registration">
-                                <div class="top-button">Регистрация</div>
-                            </a>
-                        </div>
-                        <div class="col-2 text-center">
-                            <a class="top-button-a" asp-controller="Home" asp-action="Login"><div class="top-button">Вход</div></a>
-                        </div>
-                    }
+            <div class="row blank-row"></div>
+            <div class="row blank-row"></div>
+            <div class="row blank-row"></div>
+            <div class="row main-header">
+                <div class="col-lg-3 col-md-12"><a href="/"><img src="/images/trsite_logo.png" class="main-logo" /></a></div>
+                <div class="col-lg-2 col-md-12 social">
+                    <a href="/"><i class="fab fa-vk fa-lg"></i></a>
+                    <a href="/"><i class="fab fa-instagram-square fa-lg"></i></a>
+                    <a href="/"><i class="fab fa-facebook-square fa-lg"></i></a>
+                    <a href="/"><i class="fab fa-telegram fa-lg"></i></a>
                 </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row blank-row">&nbsp;</div>
-            <div class="row blank-row">&nbsp;</div>
-            <div class="row blank-row">&nbsp;</div>
-            @if (Transfer.Web.Models.Security.IsAuthenticated)
-            {
-                <div class="row">
-                    <div class="main-menu row">
-                        <a class="col-2 text-center" asp-controller="Trip" asp-action="Index">Поездки</a>
-                        <a class="col-2 text-center" asp-controller="Сarrier" asp-action="Index">Перевозчики</a>
-                        <a class="col-2 text-center" asp-controller="Transport" asp-action="Search">Поиск ТС</a>
-                        <a class="col-2 offset-md-2 text-center" asp-controller="Account" asp-action="Reviews">Проверки</a>
-                        <a class="col-2 text-center" asp-controller="Account" asp-action="Index">Личный кабинет</a>
-                    </div>
+                <div class="col-lg-3 col-md-12 text-center">
+                    <a href="#" class="location">
+                        <div>
+                            <i class="fas fa-location-arrow"></i>
+                            <span class="city">Александровск-Сахалинский</span>
+                        </div>
+                    </a>
                 </div>
-                @if (Transfer.Web.Models.Security.ReviewEvents > 0)
+                @if (Transfer.Web.Models.Security.IsAuthenticated)
                 {
-                    <div class="row">
-                        <div class="row">
-                            <div class="col-2 offset-md-8 text-center events">@Transfer.Web.Models.Security.ReviewEvents новых</div>
-                        </div>
+                    <div class="col-lg-2 offset-lg-2 text-center">
+                        <a class="top-button-a" asp-controller="Auth" asp-action="LogOut"><div class="top-button">Выход</div></a>
                     </div>
-                    <div class="row blank-row">&nbsp;</div>
                 }
                 else
                 {
-                    <div class="row blank-row">&nbsp;</div>
-                }
-            }
-            else
-            {
-                <div class="row">
-                    <div class="main-menu row">
-                        <a class="col-2 text-center" asp-controller="Info" asp-action="About">О компании</a>
-                        <a class="col-2 text-center" asp-controller="Transport" asp-action="Index">Транспорт</a>
-                        <a class="col-2 text-center" asp-controller="Trip" asp-action="Index">Поездки</a>
-                        <a class="col-2 text-center" asp-controller="Info" asp-action="Normatives">Нормативные акты</a>
-                        <a class="col-2 text-center" asp-controller="Info" asp-action="Specials">Спецпредложения</a>
-                        <a class="col-2 text-center" asp-controller="Info" asp-action="Contacts">Контакты</a>
+                    <div class="col-lg-2 col-md-6 text-center">
+                        <a class="top-button-reg-a" asp-controller="Home" asp-action="Registration">
+                            <div class="top-button">Регистрация</div>
+                        </a>
                     </div>
-                </div>
-                <div class="row blank-row">&nbsp;</div>
-            }
-            <div class="row blank-row">&nbsp;</div>
+                    <div class="col-lg-2 col-md-6 text-center">
+                        <a class="top-button-a" asp-controller="Home" asp-action="Login"><div class="top-button">Вход</div></a>
+                    </div>
+                }
+            </div>
+            <div class="row blank-row"></div>
+            <div class="row blank-row"></div>
+            <div class="row blank-row"></div>
+            <div class="row">
+                @if (Transfer.Web.Models.Security.IsAuthenticated)
+                {
+                    <div class="main-menu row">
+                        <a class="col-md-2 text-center" asp-controller="Trip" asp-action="Index">Поездки</a>
+                        <a class="col-md-3 text-center" asp-controller="Сarrier" asp-action="Index">Перевозчики</a>
+                        <a class="col-md-3 text-center" asp-controller="Transport" asp-action="Search">Поиск ТС</a>
+                        <a class="col-md-2 text-center" asp-controller="Account" asp-action="Reviews">Проверки</a>
+                        <a class="col-md-2 text-center" asp-controller="Account" asp-action="Index">Личный кабинет</a>
+                    </div>
+                    @if (Transfer.Web.Models.Security.ReviewEvents > 0)
+                    {
+                        <div class="row">
+                            <div class="col-md-2 offset-md-8 text-center events">@Transfer.Web.Models.Security.ReviewEvents новых</div>
+                        </div>
+                    }
+                }
+                else
+                {
+                    <div class="main-menu row">
+                        <a class="col-md-2 text-center" asp-controller="Info" asp-action="About">О компании</a>
+                        <a class="col-md-2 text-center" asp-controller="Transport" asp-action="Index">Транспорт</a>
+                        <a class="col-md-2 text-center" asp-controller="Trip" asp-action="Index">Поездки</a>
+                        <a class="col-md-2 text-center" asp-controller="Info" asp-action="Normatives">Нормативные акты</a>
+                        <a class="col-md-2 text-center" asp-controller="Info" asp-action="Specials">Спецпредложения</a>
+                        <a class="col-md-2 text-center" asp-controller="Info" asp-action="Contacts">Контакты</a>
+                    </div>
+                }
+                <div class="row blank-row"></div>
+                <div class="row blank-row"></div>
+                <div class="row blank-row"></div>
+            </div>
         </div>
     </div>
     <div class="container-fluid central">
@@ -99,46 +88,65 @@
     </div>
     <div class="container-fluid bottom">
         <div class="container">
-            <div class="row blank-row">&nbsp;</div>
-            <div class="row blank-row">&nbsp;</div>
-            <div class="row blank-row">&nbsp;</div>
-            <div class="row blank-row">&nbsp;</div>
-            <div class="row">
-                <div class="col-4 text-center">
-                    <div>
-                        <a href="/"><img src="/images/trsite_logo.png" /></a><br />
-                    </div>
-                    <div class="social">
-                        <a href="/"><i class="fab fa-vk fa-lg"></i></a>
-                        <a href="/"><i class="fab fa-instagram-square fa-lg"></i></a>
-                        <a href="/"><i class="fab fa-facebook-square fa-lg"></i></a>
-                        <a href="/"><i class="fab fa-telegram fa-lg"></i></a>
-                    </div>
+            <div class="row blank-row"></div>
+            <div class="row blank-row"></div>
+            <div class="row blank-row"></div>
+            <div class="row d-flex flex-wrap align-items-center">
+                <div class="col-md-3 t-col">
+                    <a href="/"><img src="/images/trsite_logo.png" class="main-logo" /></a><br />
                 </div>
-                <div class="col-2 links">
-                    <a class="" asp-controller="Info" asp-action="About">О компании</a><br /><br />
-                    <a class="" asp-controller="Сarrier" asp-action="Index">Перевозчики</a><br /><br />
-                    <a class="" asp-controller="Trip" asp-action="Index">Поездки</a><br /><br />
-                    <a class="" asp-controller="Info" asp-action="Documents">Документы</a>
+                <div class="col-md-2 offset-1 t-col links">
+                    <a asp-controller="Info" asp-action="About">О компании</a>
                 </div>
-                <div class="col-2 links">
-                    <a class="" asp-controller="Info" asp-action="Normatives">Нормативные акты</a><br /><br />
-                    <a class="" asp-controller="Info" asp-action="Specials">Спецпредложения</a><br /><br />
-                    <a class="" asp-controller="Info" asp-action="Contacts">Контакты</a><br /><br />
-                    <a class="" asp-controller="Info" asp-action="Vacancy">Вакансии</a>
+                <div class="col-md-2 t-col links">
+                    <a asp-controller="Info" asp-action="Normatives">Нормативные акты</a>
                 </div>
-                <div class="col-4 contacts">
-                    <span class="d"><i class="fas fa-phone-alt"></i> <span>8-800-100-67-91</span></span><br /><br />
-                    <span class="d"><i class="far fa-envelope"></i> <span>info@tktransfer.com</span></span><br /><br /><br />
-                    <span class="d"><i class="far fa-calendar-alt"></i> <span>Пн-Пт: с 09:00 до 18:00 Сб,Вс: выходной</span></span>
+                <div class="col-md-3 offset-1 t-col contacts">
+                    <span class="d"><i class="fas fa-phone-alt"></i> <span>8-800-100-67-91</span></span>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4 text-center">
-                    ©2016-@(DateTime.Now.Year). Всеправазащи-щены.
+                <div class="col-md-2 offset-4 t-col links">
+                    <a asp-controller="Сarrier" asp-action="Index">Перевозчики</a>
+                </div>
+                <div class="col-md-2 t-col links">
+                    <a asp-controller="Info" asp-action="Specials">Спецпредложения</a>
+                </div>
+                <div class="col-md-3 offset-1 t-col contacts">
+                    <span class="d"><i class="far fa-envelope"></i> <span>info@tktransfer.com</span></span>
                 </div>
             </div>
-            <div class="row">&nbsp;</div>
+            <div class="row">
+                <div class="col-md-3 t-col social">
+                    <a href="/"><i class="fab fa-vk fa-lg"></i></a>
+                    <a href="/"><i class="fab fa-instagram-square fa-lg"></i></a>
+                    <a href="/"><i class="fab fa-facebook-square fa-lg"></i></a>
+                    <a href="/"><i class="fab fa-telegram fa-lg"></i></a>
+                </div>
+                <div class="col-md-2 offset-1 t-col links">
+                    <a asp-controller="Trip" asp-action="Index">Поездки</a>
+                </div>
+                <div class="col-md-2 t-col links">
+                    <a asp-controller="Info" asp-action="Contacts">Контакты</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 offset-4 t-col links">
+                    <a asp-controller="Сarrier" asp-action="Index">Перевозчики</a>
+                </div>
+                <div class="col-md-2 t-col links">
+                    <a asp-controller="Info" asp-action="Vacancy">Вакансии</a>
+                </div>
+                <div class="col-md-3 offset-1 t-col contacts">
+                    <span class="d"><i class="far fa-calendar-alt"></i> <span>Пн-Пт: с 09:00 до 18:00<br />Сб,Вс: выходной</span></span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    ©2016-@(DateTime.Now.Year). Все права защищены.
+                </div>
+            </div>
+            <div class="row blank-row"></div>
         </div>
     </div>
     @await RenderSectionAsync("Scripts", required: false)
