--- a/Transfer.Web/Styles/site.css
+++ b/Transfer.Web/Styles/site.css
@@ -32,79 +32,79 @@ img {
     background-size: cover;
 }
 
-.header .main-header {
-    line-height: 36px;
-    min-height: 36px;
-}
+    .header .main-header {
+        line-height: 36px;
+        min-height: 36px;
+    }
 
-.header .main-header .social {
-    text-align: justify;
-    line-height: 36px;
-}
+        .header .main-header .social {
+            text-align: justify;
+            line-height: 36px;
+        }
 
-.header .main-header .social a {
-    color: #0f4c71;
-    margin: 0 10px;
-}
+            .header .main-header .social a {
+                color: #0f4c71;
+                margin: 0 10px;
+            }
 
-.header .main-header .social a:hover {
-    color: #ecbf54;
-}
+                .header .main-header .social a:hover {
+                    color: #ecbf54;
+                }
 
-.header .main-header .top-button-a {
-    color: #000;
-    text-decoration: none;
-}
+        .header .main-header .top-button-a {
+            color: #000;
+            text-decoration: none;
+        }
 
-.header .main-header .top-button-a .top-button {
-    background-color: #fff;
-    border-radius: 18px;
-    line-height: 36px;
-    width: 100%;
-}
+            .header .main-header .top-button-a .top-button {
+                background-color: #fff;
+                border-radius: 18px;
+                line-height: 36px;
+                width: 100%;
+            }
 
-.header .main-header .top-button-a .top-button:hover {
-    background-color: #ecbf54;
-}
+                .header .main-header .top-button-a .top-button:hover {
+                    background-color: #ecbf54;
+                }
 
-.header .main-header .top-button-reg-a {
-    color: #fff;
-    text-decoration: none;
-}
+        .header .main-header .top-button-reg-a {
+            color: #fff;
+            text-decoration: none;
+        }
 
-.header .main-header .top-button-reg-a:hover {
-    color: #000;
-}
+            .header .main-header .top-button-reg-a:hover {
+                color: #000;
+            }
 
-.header .main-header .top-button-reg-a .top-button {
-    border-radius: 18px;
-    line-height: 34px;
-    width: 100%;
-    border: 1px solid #0f4c71;
-}
+            .header .main-header .top-button-reg-a .top-button {
+                border-radius: 18px;
+                line-height: 34px;
+                width: 100%;
+                border: 1px solid #0f4c71;
+            }
 
-.header .main-header .top-button-reg-a .top-button:hover {
-    background-color: #ecbf54;
-    border: none;
-}
+                .header .main-header .top-button-reg-a .top-button:hover {
+                    background-color: #ecbf54;
+                    border: none;
+                }
 
-.header .main-header a.location {
-    color: #0f4c71;
-    text-decoration: none;
-}
+        .header .main-header a.location {
+            color: #0f4c71;
+            text-decoration: none;
+        }
 
-.header .main-header a.location:hover {
-    color: #ecbf54;
-}
+            .header .main-header a.location:hover {
+                color: #ecbf54;
+            }
 
-.header .main-header a.location .city {
-    text-decoration: underline;
-    text-decoration-style: dashed;
-}
+            .header .main-header a.location .city {
+                text-decoration: underline;
+                text-decoration-style: dashed;
+            }
 
-.header .main-header a.location:hover .city {
-    text-decoration: none;
-}
+            .header .main-header a.location:hover .city {
+                text-decoration: none;
+            }
 
 .main-menu {
     background-color: #1b0e21;
@@ -113,18 +113,18 @@ img {
     border: 1px solid #1b0e21;
 }
 
-.main-menu a {
-    color: #fff;
-    text-decoration: none;
-}
+    .main-menu a {
+        color: #fff;
+        text-decoration: none;
+    }
 
-.main-menu a:hover {
-    color: #ecbf54;
-    text-decoration: none;
-    border-bottom: 1px solid #fff;
-    min-height: 33px;
-    line-height: 33px;
-}
+        .main-menu a:hover {
+            color: #ecbf54;
+            text-decoration: none;
+            border-bottom: 1px solid #fff;
+            min-height: 33px;
+            line-height: 33px;
+        }
 
 .events {
     line-height: 36px;
@@ -138,39 +138,69 @@ img {
     background-size: cover;
 }
 
-.bottom .social {
+    .bottom .social {
+    }
+
+        .bottom .social a {
+            color: #0f4c71;
+            display: inline-block;
+            margin: 0 18px 0 18px;
+        }
+
+            .bottom .social a:hover {
+                color: #ecbf54;
+            }
+
+    .bottom .links,
+    .bottom .contacts {
+    }
+
+        .bottom .links a {
+            color: #0f4c71;
+            text-decoration: underline;
+            text-decoration-style: dashed;
+        }
+
+            .bottom .links a:hover {
+                color: #ecbf54;
+                text-decoration: none;
+            }
+
+        .bottom .contacts .d {
+            color: #0f4c71;
+        }
+
+            .bottom .contacts .d span {
+                text-decoration: underline;
+                text-decoration-style: dashed;
+            }
+
+.login-input {
+    padding-right: 0;
 }
 
-.bottom .social a {
-    color: #0f4c71;
-    display: inline-block;
-    margin: 0 18px 0 18px;
+    .login-input input {
+        border: solid 1px #007896;
+        line-height: 22px;
+    }
+
+.login-q {
+    padding-left: 0;
+    color: #007896;
 }
 
-.bottom .social a:hover {
-    color: #ecbf54;
+.login-l input {
+    padding: 0;
+    margin: 0;
+    height: 36px;
+    width: 100%;
+    border-radius: 18px;
+    border: solid 1px #007896;
+    line-height: 36px;
+    background-color: #fff;
 }
 
-.bottom .links,
-.bottom .contacts {
-}
-
-.bottom .links a {
-    color: #0f4c71;
-    text-decoration: underline;
-    text-decoration-style: dashed;
-}
-
-.bottom .links a:hover {
-    color: #ecbf54;
-    text-decoration: none;
-}
-
-.bottom .contacts .d {
-    color: #0f4c71;
-}
-
-.bottom .contacts .d span {
-    text-decoration: underline;
-    text-decoration-style: dashed;
-}
+    .login-l input:hover {
+        background-color: #ecbf54;
+        border: solid 1px #ecbf54;
+    }
