--- a/Transfer.Web/Views/Shared/_Layout.cshtml
+++ b/Transfer.Web/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                 {
                     <div class="main-menu row">
                         <a class="col-md-2 text-center" asp-controller="Trip" asp-action="Index">Поездки</a>
-                        <a class="col-md-3 text-center" asp-controller="Сarrier" asp-action="Search">Перевозчики</a>
+                        <a class="col-md-3 text-center" asp-controller="Carrier" asp-action="Search">Перевозчики</a>
                         <a class="col-md-3 text-center" asp-controller="Transport" asp-action="Search">Поиск ТС</a>
                         <a class="col-md-2 text-center" asp-controller="Account" asp-action="Reviews">Проверки</a>
                         <a class="col-md-2 text-center" asp-controller="Account" asp-action="Index">Личный кабинет</a>
