--- a/Transfer.Web/Views/TripRequest/SearchResults.cshtml
+++ b/Transfer.Web/Views/TripRequest/SearchResults.cshtml
@@ -1,42 +1,8 @@
-﻿@model Transfer.Web.Models.Carrier.CarrierSearchFilter
+﻿@model Transfer.Web.Models.TripRequest.RequestSearchFilter
 
 @using X.PagedList.Mvc.Core;
 @using X.PagedList.Web.Common
 
-<div class="search-filter carrier-filter">
-    <div class="container">
-        <div class="row blank-row"></div>
-        <div class="row blank-row"></div>
-        <div class="row">
-            <div class="t-col col-11 col-md-5 form-group">
-                <div class="input-group input-group-icon">
-                    <i class="fas fa-map-marker-alt input-group-text"></i>
-                    <input asp-for="City" class="form-control" placeholder="В каком городе будем искать?" />
-                </div>
-            </div>
-            <div class="col-1 t-col">
-                <i class="far fa-question-circle fa-lg"></i>
-            </div>
-            <div class="t-col col-11 col-md-5 form-group">
-                <div class="input-group input-group-icon">
-                    <i class="fas fa-map-marked input-group-text"></i>
-                    <input asp-for="Name" class="form-control" placeholder="Как называется компания?" />
-                </div>
-            </div>
-            <div class="col-1 t-col">
-                <i class="far fa-question-circle fa-lg"></i>
-            </div>
-        </div>
-        <div class="row blank-row"></div>
-        <div class="row">
-            <div class="text-center col-md-2 col-12 offset-md-10 t-col float-start">
-                <button type="submit" class="button-one">Найти</button>
-            </div>
-        </div>
-        <div class="row blank-row"></div>
-        <div class="row blank-row"></div>
-    </div>
-</div>
 <div class="row blank-row"></div>
         @Html.HiddenFor(x => x.PageNumber)
 <div class="row blank-row"></div>
@@ -58,7 +24,7 @@
             <i class="fas fa-star"></i>
         </label>
         &nbsp;&nbsp;&nbsp;
-        @Html.CheckBoxFor(x => x.OrderByChecked, new { @class="btn-check", autocomplete="off", onclick="DisableCheckboxes(this)" })
+        @Html.CheckBoxFor(x => x.OrderByChild, new { @class="btn-check", autocomplete="off", onclick="DisableCheckboxes(this)" })
         <label class="btn btn-sm" for="OrderByChecked">
             <i class="fas fa-caret-down"></i>
             <i class="fas fa-lock-open"></i>
@@ -97,7 +63,7 @@
     <div class="row blank-row"></div>
     <div class="row carrier">
         <div class="t-col col-12">
-            <i class="fas fa-map-marked"></i> <span style="color: #000;">@c.Address</span>
+            <i class="fas fa-map-marked"></i> <span style="color: #000;">@c.AddressFrom</span>
         </div>
     </div>
     <div class="row blank-row"></div>
@@ -119,7 +85,7 @@
         {
         Model.Results = null;
         Model.PageNumber = page;
-        return Url.Action("Search", "Carrier", Model);
+        return Url.Action("Search", "TripRequest", Model);
         }, PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(
         new PagedListRenderOptions {
         DisplayItemSliceAndTotal = false,
@@ -130,7 +96,7 @@
         LinkToNextPageFormat = "Вперед"
 
         },
-        new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "CarrierSearch", InsertionMode = InsertionMode.Replace }))
+        new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "TripRequestSearch", InsertionMode = InsertionMode.Replace }))
     </div>
 </div>
 <div class="row blank-row"></div>
