--- a/Transfer.Web/Views/TripRequest/Search.cshtml
+++ b/Transfer.Web/Views/TripRequest/Search.cshtml
@@ -12,7 +12,7 @@
     <div class="row blank-row"></div>
     <div class="row">
         <div class="t-col col-12 crumbs">
-            ---&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Home" asp-action="Index">Главная</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Carrier" asp-action="Search">Перевозчики</a>
+            ---&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="Home" asp-action="Index">Главная</a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<a class="top-button-a" asp-controller="TripReques" asp-action="Search">Перевозчики</a>
         </div>
     </div>
     <div class="row blank-row"></div>
@@ -26,8 +26,11 @@
     </div>
     <div class="row blank-row"></div>
     <div class="row">
-        <div class="t-col col-12">
-            <h1 style="color: #0f4c71">Ваши перевозчики</h1>
+        <div class="t-col col-10">
+            <h1 style="color: #0f4c71">Актуальные запросы на поездки</h1>
+        </div>
+        <div class="t-col col-2 text-end">
+            Обновить
         </div>
     </div>
     <div class="row blank-row"></div>
