--- a/Transfer.Web/Views/Carrier/SearchResults.cshtml
+++ b/Transfer.Web/Views/Carrier/SearchResults.cshtml
@@ -68,13 +68,13 @@
         Выводить по:
     </div>
     <div class="t-col col-1 text-end form-group">
-        @Html.DropDownListFor(x => x.PageSize, new List<SelectListItem> { new SelectListItem("5", "5"), new SelectListItem("10", "10"), new SelectListItem("25", "25") }, null, new { @class = "form-select form-select-sm" })
+        @Html.DropDownListFor(x => x.PageSize, new List<SelectListItem> { new SelectListItem("5", "5"), new SelectListItem("10", "10"), new SelectListItem("25", "25") }, null, new { @class = "form-select form-select-sm", @onchange="DisableCheckboxes(this)" })
     </div>
 </div>
 <hr style="color: #007896; border: dashed 1px #007896;">
 <div class="row">
     <div class="t-col col-12 text-center">
-        <a asp-action="NewCarrier" asp-controller="Сarrier"><div class="new-carrier-link"><i class="fas fa-plus-circle"></i></div></a>
+        <a asp-action="NewCarrier" asp-controller="Carrier"><div class="new-carrier-link"><i class="fas fa-plus-circle"></i></div></a>
     </div>
 </div>
 @foreach (var c in Model.Results)
