--- a/Transfer.Web/wwwroot/css/main.css
+++ b/Transfer.Web/wwwroot/css/main.css
@@ -356,3 +356,70 @@ img {
         border: solid 1px #ecbf54;
     }
 
+.the-form {
+    background: url('/images/768.png') left top no-repeat;
+    background-size: cover;
+    border-radius: 18px;
+    padding-left: 18px;
+    padding-right: 18px;
+}
+
+    .the-form textarea:active,
+    .the-form input:active,
+    .the-form textarea:focus,
+    .the-form input:focus,
+    .the-form button:focus {
+        outline: 0px !important;
+        -webkit-appearance: none;
+        box-shadow: none !important;
+        border-color: #fff;
+    }
+
+    .the-form .form-row i {
+        color: #007896;
+    }
+
+        .the-form .form-row i.fa-question-circle:hover {
+            color: #ecbf54;
+            cursor: pointer;
+        }
+
+    .the-form .form-row .chk-label {
+        color: #fff;
+    }
+
+        .the-form .form-row .chk-label input[type=checkbox] {
+            border: solid 1px #007896;
+            border-radius: 0.5em;
+            margin-top: 0.6em;
+        }
+
+        .the-form .form-row .chk-label label {
+            margin-left: 7px;
+        }
+
+            .the-form .form-row .chk-label label a {
+                color: #007896;
+                text-decoration: none;
+                border-bottom: dashed 1px #007896;
+            }
+
+    .the-form .button-one {
+        border-radius: 18px;
+        line-height: 34px;
+        width: 100%;
+        border: 1px solid #0f4c71;
+        background-color: #ecbf54;
+    }
+
+    .the-form input.input-validation-error {
+        border: 1px solid #b94a48;
+    }
+
+    .the-form .the-error {
+        color: #fff;
+    }
+
+        .the-form .the-error i {
+            color: #007896;
+        }
