--- a/Transfer.Web/Views/Carrier/Carrier.cshtml
+++ b/Transfer.Web/Views/Carrier/Carrier.cshtml
@@ -4,6 +4,15 @@
 @{
 }
 
+@section Styles {
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/css/fileinput.min.css" integrity="sha512-qPjB0hQKYTx1Za9Xip5h0PXcxaR1cRbHuZHo9z+gb5IgM6ZOTtIH4QLITCxcCp/8RMXtw2Z85MIZLv6LfGTLiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+}
+
+@section Scripts {
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/js/fileinput.min.js" integrity="sha512-CCLv901EuJXf3k0OrE5qix8s2HaCDpjeBERR2wVHUwzEIc7jfiK9wqJFssyMOc1lJ/KvYKsDenzxbDTAQ4nh1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="~/js/Carrier/Save.js" crossorigin="anonymous"></script>
+}
+
 <div class="container">
     <div class="row blank-row"></div>
     <div class="row blank-row"></div>
@@ -28,7 +37,7 @@
         </div>
     </div>
     <div class="row blank-row"></div>
-    <form id="CarrierSave" asp-controller="Carrier" asp-action="Save" data-ajax-begin="LoginStart" data-ajax-failure="LoginFailure" data-ajax-success="LoginSuccessRefresh" data-ajax="true" data-ajax-method="POST" data-ajax-update="#CarrierSave">
+    <form asp-controller="Carrier" asp-action="Save" method="post" enctype="multipart/form-data">
         @await Html.PartialAsync("~/Views/Carrier/Save.cshtml", Model)
     </form>
     <div class="row blank-row"></div>
