--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -140,6 +140,21 @@
         <div class="col-12 t-col" style="color: #fff;"><h3>Дополнительные документы</h3></div>
     </div>
     <div class="row blank-row"></div>
+        <div class="row form-row">
+        <div class="t-col col-6 form-group">
+            <div class="row">
+                <div class="t-col col-8">
+                    <input asp-for="LicenceFileId" readonly="readonly" class="form-control" placeholder="Скан лицензии на осуществление перевозок" />
+                </div>
+                <div class="t-col col-4">
+                    <input asp-for="LicenceFile" class="file" data-show-Caption data-msg-placeholder="Скан лицензии на осуществление перевозок" data-browse-class="button-one" data-show-browse="true" data-browse-label="Загрузить" data-show-upload="false" data-show-preview="false" />
+                </div>
+            </div>
+        </div>
+        <div class="t-col col-6 form-group text-center">
+            <input asp-for="LogoFile" class="file" data-msg-placeholder="Логотип компании" data-browse-label="Загрузить" data-show-upload="false" data-show-preview="false" />
+        </div>
+    </div>
     <div class="row form-row">
         <div class="t-col col-12 chk-label form-group">
             <input id="Agreement" asp-for="Agreement" class="form-check-input" />
